--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,10 @@
-* {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
+}
+
+* {
   margin: 0;
   padding: 0;
 }
@@ -11,6 +16,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: var(--color-body);
+  color: var(--color-font);
 }
 
 code {
